# POC-qa-support

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  qa_dataset.csv  test.ipynb  test_dialog.ipynb
dataset/: dataset.json  kb_doc_1.md  kb_doc_2.md  kb_doc_3.md
scripts/: eval_is_complaint_from_log.py
support_agent/: __init__.py  config.py  error.py  graph.py  knowledge_base.py  llm.py  logging_utils.py  message_graph.py  prompts.py  state.py  test_cases.py  utils.py
support_agent/nodes/: __init__.py  classify.py  errors.py  escalation.py  evaluation.py  generation.py  retrieval.py
