[project]
name = "smart_QA_bot"
version = "0.1.0"
description = "POC for testing the capabilities of LLMs in QA scenarios."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.1",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-deepseek>=1.0.1",
    "langchain-gigachat>=0.5.1",
    "langgraph>=1.2.1",
    "pandas>=3.0.3",
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.50",
    "psycopg[binary]>=3.3.4",
]
